--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<p>HEllO World</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <h1>Ticorporate Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section id="about">
+      <h2>Mitä osasin alussa ja mitä tc:n jälkeen</h2>
+      <p>Ticorporaten alku</p>
+      <p>moi</p>
+    </section>
+    <section id="projects">
+      <h2></h2>
+      <div class="project">
+        <h3>Project 1</h3>
+        <p>A brief description of your project goes here.</p>
+      </div>
+      <div class="project">
+        <h3>To do list</h3>
+        <p>1- portfolio</p>
+        <p>2- sustainable development</p>
+        <p>3- pilvialustat</p>
+        <p>4- business communication</p>
+        <p>5- oppari</p>
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+  </footer>
+</body>
+
+</html>
