ohjelmointi osuus tehty

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>Ticorporate Portfolio</h1>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a>Eelis Pekkarinen</a></li>
+          <li><a>ad1770</a></li>
+          <li><a>ad1770@student.jamk.fi</a></li>
         </ul>
       </nav>
     </div>
@@ -24,28 +24,99 @@
   <main>
     <section id="about">
       <h2>Mitä osasin alussa ja mitä tc:n jälkeen</h2>
-      <p>Ticorporaten alku</p>
-      <p>moi</p>
+      <p>-Kun kurssi alkoi halusin oppia lisää mobiili sovelluksien kehityksestä ja saada kokonaiskuva miten mobiili
+        sovelluksia tehdään ja minkälaisia työkaluja on olemassa.</p>
+      <p>-Ticorporaten aikana opin todella paljon minkälaisia työkaluja on ja sain hyvän kuvan myös expon ja
+        reactnativen
+        käyttämisestä. Tutuksi tuli myös firebase vaikka sitä ei minun tullut käytetty sitä kovin paljoa.
+        Koen myös että minun tiedon haku ja uuden oppiminen kehittyi todella paljon koska sitä tuli tehtyä todella
+        paljon</p>
+    </section>
+
+
+    <section id="projects">
+      <h2></h2>
+      <div class="project">
+        <h3>Ohjelmointi</h3>
+        <p>Ticorporatessa minun pääroolini oli ohjelmoija eli tuotin koodia sovellukseen.
+
+        </p>
+        <p>-Ticorporaten alussa suuri osa ajasta meni siihen että ryhmäläisten kanssa koitettiin löytää oikea
+          sovelluskehitysalusta joka vastaisi meidän tarpeisiin.
+
+        </p>
+        <p>-Ensimmäisenä ehdotin ryhmälle että tehdäänkö pwa sovellus angularilla mutta todettiin että se ei ole
+          meille oikea vaihtoehto. Seuraavaksi alettiin käyttämään svelte nativea.
+          Svelte nativella kun alettiin tekemään aika nopeasti huomattiin että se on todella deprekoitunut ja että se ei
+          oikeastaan toimi.
+          Sen jälkee kuin päätettiin että etsitään vielä uusi framework jota käytetään. Aloin googlaamaan ja
+          etsimään uusia työkaluja ja vastaan tuli react native jota sitten lähdettiin testaamaan
+          ja todettiin että se toimii oikein hyvin ja siihen vielä löytyi todella paljon ohjeita ja muutenkin
+          informaatiota mitä esim sveltestä ei löytynyt
+          ja näin jälkeen päin koen että react native on todella hyvä alusta ja tykkäsin sen käytösta. Mutta olisi
+          pitänyt jättää se expo pois välistä se auttoi alussa mutta loppu vaiheessa se tuotti todella paljon ongelmia
+        </p>
+        <h3>Navigaatio</h3>
+        <p>Sovelluksen alussa tein meille navigaation reactin stack navigaattorilla joka vaikutti todella hyvältä ja
+          sitä se olikin</p>
+        <img src="./img/1.JPG" width="600">
+        <p>Kuvassa näkyy osa meidän stack navigaattoria jossa oli todella kätevä ominaisuus jolla pystyi tehdä headerin
+          joka menee sovelluksen joka näkymään ja sen sai myös helposti piilotetua</p>
+
+
+        <h3>Tarot sivu</h3>
+        <p>käytin myös paljon aikaa miedän tarot sivuun jossa luetaan päivän tarot kortti </p>
+        <img src="./img/2.JPG" width="600">
+        <p>Tässä kuvassa on osa miedän tarot sivua ja kuvassa näkyy osa koodia jossa käyttetään asyncstoragea jonne
+          tallenetaan aiemmin arvottu tarot korrti ja vertaillaan aiempaa tallennusta joka varmistaa että näät
+          yhdenkortin päivässä etkä aina saa uutta kortia kun aikaiset näkymän</p>
+
+        <h3>Sivun ulkoasu</h3>
+        <p>Sovelluksessa oli isossa roolissa ulkoasu meillä oli todella taitavat visuaaliset suunnitelijat ja muutenkin
+          sovelluksen ulkoasu oli todella hieno</p>
+
+        <img src="./img/3.JPG" width="600">
+        <p>Tässä kuvassa näkee osan meidän sovelluksen tyylitiedosta Juurikin menu näkymän tyylitiedosta josta oli suht
+          vaikea saada suunnitellun näköinen mutta ehkä pointtina tässä on se että käytin paljon aikaa sovelluksen
+          ulkoasuun ja että se olisi suunnitelmia vastaava. ja muutenkin mukava käyttää. suunnitelin myös sitä että
+          miten käyttäjän näkökulmasta on helppo soellusta käyttää ja että rakaisu ei ole sellainen joa vaikea toteuttaa
+          koodaamalla</p>
+      </div>
+
+      <h3>Yhteen veto</h3>
+      <p>Ohjelmoinnin osalta minulla oli mobiilisovellus kehityksestä hämärä kuva mutta ticorporaten aikana sain todella
+        hyvän kuvan miten mobiilisovelluksia tehdään opin käyttämään hyvin ractnativea ja koen että osaisin tehdä
+        reacnativella jatkossain sovelluksia vaikka ne olisikin vähän monimutkaisempia</p>
+
     </section>
     <section id="projects">
       <h2></h2>
       <div class="project">
-        <h3>Project 1</h3>
+        <h3>Markkinointi</h3>
         <p>A brief description of your project goes here.</p>
       </div>
+
+    </section>
+    <section id="projects">
+      <h2></h2>
       <div class="project">
-        <h3>To do list</h3>
-        <p>1- portfolio</p>
-        <p>2- sustainable development</p>
-        <p>3- pilvialustat</p>
-        <p>4- business communication</p>
-        <p>5- oppari</p>
+        <h3>scrum master</h3>
+        <p>A brief description of your project goes here.</p>
       </div>
+
+    </section>
+    <section id="projects">
+      <h2></h2>
+      <div class="project">
+        <h3>Testaus</h3>
+        <p>A brief description of your project goes here.</p>
+      </div>
+
     </section>
 
   </main>
   <footer>
-    <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+    <p></p>
   </footer>
 </body>
 
